set(LIBRARY_DIR "${proton_SOURCE_DIR}/contrib/pulsar-client-cpp")
set(PROTOC_PATH protoc)

#execute_process(COMMAND ${LIBRARY_DIR}/build-support/gen-pulsar-version-macro.py OUTPUT_STRIP_TRAILING_WHITESPACE
#        OUTPUT_VARIABLE PULSAR_CLIENT_VERSION_MACRO)

configure_file(${LIBRARY_DIR}/templates/Version.h.in ${LIBRARY_DIR}/include/pulsar/Version.h @ONLY)

set(AUTOGEN_DIR ${LIBRARY_DIR}/generated)
set(LIB_AUTOGEN_DIR ${AUTOGEN_DIR}/lib)
set(PROTO_SOURCES ${LIB_AUTOGEN_DIR}/PulsarApi.pb.cc ${LIB_AUTOGEN_DIR}/PulsarApi.pb.h)

ADD_CUSTOM_COMMAND(
     OUTPUT ${PROTO_SOURCES}
     COMMAND ${PROTOC_PATH} -I ${LIBRARY_DIR}/proto ${LIBRARY_DIR}/proto/PulsarApi.proto --cpp_out=${LIB_AUTOGEN_DIR}
     DEPENDS
     ${LIBRARY_DIR}/proto/PulsarApi.proto)

set(SRCS
	"${LIBRARY_DIR}/lib/TimeUtils.h"
	"${LIBRARY_DIR}/lib/Backoff.cc"
	"${LIBRARY_DIR}/lib/ConsumerInterceptors.h"
	"${LIBRARY_DIR}/lib/CompressionCodecZLib.cc"
	"${LIBRARY_DIR}/lib/ReaderImpl.cc"
	"${LIBRARY_DIR}/lib/LookupService.h"
	"${LIBRARY_DIR}/lib/CompressionCodecLZ4.h"
	"${LIBRARY_DIR}/lib/UnAckedMessageTrackerInterface.h"
	"${LIBRARY_DIR}/lib/KeyValueImpl.cc"
	"${LIBRARY_DIR}/lib/AsioDefines.h"
	"${LIBRARY_DIR}/lib/TopicName.h"
	"${LIBRARY_DIR}/lib/EncryptionKeyInfoImpl.cc"
	"${LIBRARY_DIR}/lib/Murmur3_32Hash.cc"
	"${LIBRARY_DIR}/lib/BatchMessageContainerBase.cc"
	"${LIBRARY_DIR}/lib/ConsumerImplBase.cc"
	"${LIBRARY_DIR}/lib/DeadLetterPolicyBuilder.cc"
	"${LIBRARY_DIR}/lib/AckGroupingTracker.cc"
	"${LIBRARY_DIR}/lib/CompressionCodecZstd.h"
	"${LIBRARY_DIR}/lib/Client.cc"
	"${LIBRARY_DIR}/lib/PartitionedProducerImpl.cc"
	"${LIBRARY_DIR}/lib/ClientConnection.h"
	"${LIBRARY_DIR}/lib/KeyValue.cc"
	"${LIBRARY_DIR}/lib/BrokerConsumerStats.cc"
	"${LIBRARY_DIR}/lib/MessagesImpl.h"
	"${LIBRARY_DIR}/lib/PartitionedProducerImpl.h"
	"${LIBRARY_DIR}/lib/ConnectionPool.cc"
	"${LIBRARY_DIR}/lib/lz4"
	"${LIBRARY_DIR}/lib/lz4/lz4.cc"
	"${LIBRARY_DIR}/lib/lz4/lz4.h"
	"${LIBRARY_DIR}/lib/CompressionCodecSnappy.cc"
	"${LIBRARY_DIR}/lib/BatchedMessageIdImpl.h"
	"${LIBRARY_DIR}/lib/TableView.cc"
	"${LIBRARY_DIR}/lib/ClientConfiguration.cc"
	"${LIBRARY_DIR}/lib/MessageId.cc"
	"${LIBRARY_DIR}/lib/ConsumerInterceptors.cc"
	"${LIBRARY_DIR}/lib/KeySharedPolicyImpl.h"
	"${LIBRARY_DIR}/lib/ConsoleLoggerFactory.cc"
	"${LIBRARY_DIR}/lib/BatchReceivePolicyImpl.h"
	"${LIBRARY_DIR}/lib/PeriodicTask.h"
	"${LIBRARY_DIR}/lib/TopicMetadataImpl.cc"
	"${LIBRARY_DIR}/lib/Backoff.h"
	"${LIBRARY_DIR}/lib/ProtoApiEnums.h"
	"${LIBRARY_DIR}/lib/Hash.h"
	"${LIBRARY_DIR}/lib/Consumer.cc"
	"${LIBRARY_DIR}/lib/TableViewImpl.h"
	"${LIBRARY_DIR}/lib/ExecutorService.cc"
	"${LIBRARY_DIR}/lib/ProducerImpl.h"
	"${LIBRARY_DIR}/lib/NamedEntity.cc"
	"${LIBRARY_DIR}/lib/BatchMessageKeyBasedContainer.cc"
	"${LIBRARY_DIR}/lib/MultiTopicsBrokerConsumerStatsImpl.h"
	"${LIBRARY_DIR}/lib/SimpleLogger.h"
	"${LIBRARY_DIR}/lib/c"
	"${LIBRARY_DIR}/lib/c/c_ReaderConfiguration.cc"
	"${LIBRARY_DIR}/lib/c/c_Producer.cc"
	"${LIBRARY_DIR}/lib/c/c_Message.cc"
	"${LIBRARY_DIR}/lib/c/c_ProducerConfiguration.cc"
	"${LIBRARY_DIR}/lib/c/cStringMap.cc"
	"${LIBRARY_DIR}/lib/c/c_Client.cc"
	"${LIBRARY_DIR}/lib/c/cStringList.cc"
	"${LIBRARY_DIR}/lib/c/c_Authentication.cc"
	"${LIBRARY_DIR}/lib/c/c_MessageRouter.cc"
	"${LIBRARY_DIR}/lib/c/c_structs.h"
	"${LIBRARY_DIR}/lib/c/c_Messages.cc"
	"${LIBRARY_DIR}/lib/c/c_Result.cc"
	"${LIBRARY_DIR}/lib/c/c_ClientConfiguration.cc"
	"${LIBRARY_DIR}/lib/c/c_TableViewConfiguration.cc"
	"${LIBRARY_DIR}/lib/c/c_ConsumerConfiguration.cc"
	"${LIBRARY_DIR}/lib/c/c_Reader.cc"
	"${LIBRARY_DIR}/lib/c/c_MessageId.cc"
	"${LIBRARY_DIR}/lib/c/c_Consumer.cc"
	"${LIBRARY_DIR}/lib/c/c_TableView.cc"
	"${LIBRARY_DIR}/lib/ConsumerConfiguration.cc"
	"${LIBRARY_DIR}/lib/BoostHash.h"
	"${LIBRARY_DIR}/lib/ProducerConfiguration.cc"
	"${LIBRARY_DIR}/lib/ResultUtils.h"
	"${LIBRARY_DIR}/lib/ObjectPool.h"
	"${LIBRARY_DIR}/lib/RoundRobinMessageRouter.h"
	"${LIBRARY_DIR}/lib/BatchMessageContainerBase.h"
	"${LIBRARY_DIR}/lib/Commands.cc"
	"${LIBRARY_DIR}/lib/ChunkMessageIdImpl.h"
	"${LIBRARY_DIR}/lib/PatternMultiTopicsConsumerImpl.cc"
	"${LIBRARY_DIR}/lib/NegativeAcksTracker.cc"
	"${LIBRARY_DIR}/lib/MessageRouterBase.cc"
	"${LIBRARY_DIR}/lib/UnboundedBlockingQueue.h"
	"${LIBRARY_DIR}/lib/ConsumerImpl.h"
	"${LIBRARY_DIR}/lib/EncryptionKeyInfoImpl.h"
	"${LIBRARY_DIR}/lib/MessageImpl.cc"
	"${LIBRARY_DIR}/lib/MultiTopicsBrokerConsumerStatsImpl.cc"
	"${LIBRARY_DIR}/lib/LogUtils.cc"
	"${LIBRARY_DIR}/lib/ConsoleLoggerFactoryImpl.h"
	"${LIBRARY_DIR}/lib/RoundRobinMessageRouter.cc"
	"${LIBRARY_DIR}/lib/Synchronized.h"
	"${LIBRARY_DIR}/lib/CurlWrapper.h"
	"${LIBRARY_DIR}/lib/BatchMessageContainer.h"
	"${LIBRARY_DIR}/lib/GetLastMessageIdResponse.h"
	"${LIBRARY_DIR}/lib/ProducerInterceptors.h"
	"${LIBRARY_DIR}/lib/BrokerConsumerStatsImplBase.h"
	"${LIBRARY_DIR}/lib/MemoryLimitController.h"
	"${LIBRARY_DIR}/lib/SchemaUtils.h"
	"${LIBRARY_DIR}/lib/CompressionCodec.h"
	"${LIBRARY_DIR}/lib/EncryptionKeyInfo.cc"
	"${LIBRARY_DIR}/lib/ProducerImplBase.h"
	"${LIBRARY_DIR}/lib/Latch.cc"
	"${LIBRARY_DIR}/lib/SharedBuffer.h"
	"${LIBRARY_DIR}/lib/MessageCrypto.h"
	"${LIBRARY_DIR}/lib/ConsumerImplBase.h"
	"${LIBRARY_DIR}/lib/Commands.h"
	"${LIBRARY_DIR}/lib/TableViewImpl.cc"
	"${LIBRARY_DIR}/lib/TestUtil.h"
	"${LIBRARY_DIR}/lib/MessagesImpl.cc"
	"${LIBRARY_DIR}/lib/PulsarScheme.h"
	"${LIBRARY_DIR}/lib/ClientImpl.cc"
	"${LIBRARY_DIR}/lib/ServiceURI.cc"
	"${LIBRARY_DIR}/lib/BrokerConsumerStatsImpl.h"
	"${LIBRARY_DIR}/lib/Utils.h"
	"${LIBRARY_DIR}/lib/HTTPLookupService.h"
	"${LIBRARY_DIR}/lib/BitSet.h"
	"${LIBRARY_DIR}/lib/MessageIdBuilder.cc"
	"${LIBRARY_DIR}/lib/AckGroupingTracker.h"
	"${LIBRARY_DIR}/lib/BatchReceivePolicy.cc"
	"${LIBRARY_DIR}/lib/Schema.cc"
	"${LIBRARY_DIR}/lib/Reader.cc"
	"${LIBRARY_DIR}/lib/checksum"
	"${LIBRARY_DIR}/lib/checksum/crc32c_sse42.cc"
	"${LIBRARY_DIR}/lib/checksum/crc32c_arm.h"
	"${LIBRARY_DIR}/lib/checksum/ChecksumProvider.cc"
	"${LIBRARY_DIR}/lib/checksum/crc32c_sw.cc"
	"${LIBRARY_DIR}/lib/checksum/ChecksumProvider.h"
	"${LIBRARY_DIR}/lib/checksum/gf2.hpp"
	"${LIBRARY_DIR}/lib/checksum/crc32c_arm.cc"
	"${LIBRARY_DIR}/lib/checksum/int_types.h"
	"${LIBRARY_DIR}/lib/checksum/crc32c_sw.h"
	"${LIBRARY_DIR}/lib/checksum/crc32c_sse42.h"
	"${LIBRARY_DIR}/lib/ProducerInterceptors.cc"
	"${LIBRARY_DIR}/lib/ServiceURI.h"
	"${LIBRARY_DIR}/lib/CryptoKeyReader.cc"
	"${LIBRARY_DIR}/lib/SinglePartitionMessageRouter.cc"
	"${LIBRARY_DIR}/lib/BrokerConsumerStatsImpl.cc"
	"${LIBRARY_DIR}/lib/CompressionCodecZLib.h"
	"${LIBRARY_DIR}/lib/RetryableOperation.h"
	"${LIBRARY_DIR}/lib/MessageBuilder.cc"
	"${LIBRARY_DIR}/lib/JavaStringHash.cc"
	"${LIBRARY_DIR}/lib/BlockingQueue.h"
	"${LIBRARY_DIR}/lib/AckGroupingTrackerDisabled.h"
	"${LIBRARY_DIR}/lib/UnAckedMessageTrackerDisabled.h"
	"${LIBRARY_DIR}/lib/MessageRouterBase.h"
	"${LIBRARY_DIR}/lib/BinaryProtoLookupService.cc"
	"${LIBRARY_DIR}/lib/ClientConfigurationImpl.h"
	"${LIBRARY_DIR}/lib/ClientConnectionAdaptor.h"
	"${LIBRARY_DIR}/lib/Authentication.cc"
	"${LIBRARY_DIR}/lib/KeySharedPolicy.cc"
	"${LIBRARY_DIR}/lib/BatchMessageContainer.cc"
	"${LIBRARY_DIR}/lib/AckGroupingTrackerEnabled.h"
	"${LIBRARY_DIR}/lib/ExecutorService.h"
	"${LIBRARY_DIR}/lib/Murmur3_32Hash.h"
	"${LIBRARY_DIR}/lib/MessageIdImpl.h"
	"${LIBRARY_DIR}/lib/Producer.cc"
	"${LIBRARY_DIR}/lib/UnAckedMessageTrackerEnabled.cc"
	"${LIBRARY_DIR}/lib/Semaphore.cc"
	"${LIBRARY_DIR}/lib/MessageBatch.cc"
	"${LIBRARY_DIR}/lib/CompressionCodecZstd.cc"
	"${LIBRARY_DIR}/lib/UnAckedMessageTrackerEnabled.h"
	"${LIBRARY_DIR}/lib/TopicName.cc"
	"${LIBRARY_DIR}/lib/AckGroupingTrackerEnabled.cc"
	"${LIBRARY_DIR}/lib/CompressionCodec.cc"
	"${LIBRARY_DIR}/lib/ServiceNameResolver.h"
	"${LIBRARY_DIR}/lib/NamespaceName.h"
	"${LIBRARY_DIR}/lib/MultiTopicsConsumerImpl.cc"
	"${LIBRARY_DIR}/lib/Result.cc"
	"${LIBRARY_DIR}/lib/Url.cc"
	"${LIBRARY_DIR}/lib/OpSendMsg.h"
	"${LIBRARY_DIR}/lib/ReaderImpl.h"
	"${LIBRARY_DIR}/lib/HandlerBase.cc"
	"${LIBRARY_DIR}/lib/SynchronizedHashMap.h"
	"${LIBRARY_DIR}/lib/HandlerBase.h"
	"${LIBRARY_DIR}/lib/ClientImpl.h"
	"${LIBRARY_DIR}/lib/AsioTimer.h"
	"${LIBRARY_DIR}/lib/DeadLetterPolicyImpl.h"
	"${LIBRARY_DIR}/lib/JavaStringHash.h"
	"${LIBRARY_DIR}/lib/ProducerImpl.cc"
	"${LIBRARY_DIR}/lib/ConsumerConfigurationImpl.h"
	"${LIBRARY_DIR}/lib/Latch.h"
	"${LIBRARY_DIR}/lib/MessageCrypto.cc"
	"${LIBRARY_DIR}/lib/ConsumerImpl.cc"
	"${LIBRARY_DIR}/lib/BatchMessageKeyBasedContainer.h"
	"${LIBRARY_DIR}/lib/Url.h"
	"${LIBRARY_DIR}/lib/CompressionCodecLZ4.cc"
	"${LIBRARY_DIR}/lib/Message.cc"
	"${LIBRARY_DIR}/lib/auth"
	"${LIBRARY_DIR}/lib/auth/AuthToken.cc"
	"${LIBRARY_DIR}/lib/auth/AuthOauth2.h"
	"${LIBRARY_DIR}/lib/auth/InitialAuthData.h"
	"${LIBRARY_DIR}/lib/auth/AuthTls.h"
	"${LIBRARY_DIR}/lib/auth/athenz"
	"${LIBRARY_DIR}/lib/auth/athenz/ZTSClient.h"
	"${LIBRARY_DIR}/lib/auth/athenz/ZTSClient.cc"
	"${LIBRARY_DIR}/lib/auth/AuthTls.cc"
	"${LIBRARY_DIR}/lib/auth/AuthOauth2.cc"
	"${LIBRARY_DIR}/lib/auth/AuthAthenz.cc"
	"${LIBRARY_DIR}/lib/auth/AuthAthenz.h"
	"${LIBRARY_DIR}/lib/auth/AuthBasic.h"
	"${LIBRARY_DIR}/lib/auth/AuthBasic.cc"
	"${LIBRARY_DIR}/lib/auth/AuthToken.h"
	"${LIBRARY_DIR}/lib/MessageAndCallbackBatch.cc"
	"${LIBRARY_DIR}/lib/SinglePartitionMessageRouter.h"
	"${LIBRARY_DIR}/lib/BinaryProtoLookupService.h"
	"${LIBRARY_DIR}/lib/NamedEntity.h"
	"${LIBRARY_DIR}/lib/ProducerConfigurationImpl.h"
	"${LIBRARY_DIR}/lib/FileLoggerFactoryImpl.h"
	"${LIBRARY_DIR}/lib/LookupDataResult.h"
	"${LIBRARY_DIR}/lib/ProtobufNativeSchema.cc"
	"${LIBRARY_DIR}/lib/DeadLetterPolicyImpl.cc"
	"${LIBRARY_DIR}/lib/MapCache.h"
	"${LIBRARY_DIR}/lib/ReaderConfiguration.cc"
	"${LIBRARY_DIR}/lib/ConnectionPool.h"
	"${LIBRARY_DIR}/lib/Semaphore.h"
	"${LIBRARY_DIR}/lib/PendingFailures.h"
	"${LIBRARY_DIR}/lib/Int64SerDes.h"
	"${LIBRARY_DIR}/lib/HTTPLookupService.cc"
	"${LIBRARY_DIR}/lib/BoostHash.cc"
	"${LIBRARY_DIR}/lib/AckGroupingTrackerDisabled.cc"
	"${LIBRARY_DIR}/lib/KeyValueImpl.h"
	"${LIBRARY_DIR}/lib/MemoryLimitController.cc"
	"${LIBRARY_DIR}/lib/LogUtils.h"
	"${LIBRARY_DIR}/lib/TopicMetadataImpl.h"
	"${LIBRARY_DIR}/lib/Base64Utils.h"
	"${LIBRARY_DIR}/lib/PatternMultiTopicsConsumerImpl.h"
	"${LIBRARY_DIR}/lib/DeprecatedException.cc"
	"${LIBRARY_DIR}/lib/RetryableOperationCache.h"
	"${LIBRARY_DIR}/lib/CompressionCodecSnappy.h"
	"${LIBRARY_DIR}/lib/MessageIdUtil.h"
	"${LIBRARY_DIR}/lib/NegativeAcksTracker.h"
	"${LIBRARY_DIR}/lib/ServiceUnitId.h"
	"${LIBRARY_DIR}/lib/UtilAllocator.h"
	"${LIBRARY_DIR}/lib/PeriodicTask.cc"
	"${LIBRARY_DIR}/lib/FileLoggerFactory.cc"
	"${LIBRARY_DIR}/lib/NamespaceName.cc"
	"${LIBRARY_DIR}/lib/MessageAndCallbackBatch.h"
	"${LIBRARY_DIR}/lib/stats"
	"${LIBRARY_DIR}/lib/stats/ProducerStatsBase.h"
	"${LIBRARY_DIR}/lib/stats/ProducerStatsImpl.cc"
	"${LIBRARY_DIR}/lib/stats/ConsumerStatsDisabled.h"
	"${LIBRARY_DIR}/lib/stats/ProducerStatsImpl.h"
	"${LIBRARY_DIR}/lib/stats/ConsumerStatsImpl.cc"
	"${LIBRARY_DIR}/lib/stats/ProducerStatsDisabled.h"
	"${LIBRARY_DIR}/lib/stats/ConsumerStatsImpl.h"
	"${LIBRARY_DIR}/lib/stats/ConsumerStatsBase.h"
	"${LIBRARY_DIR}/lib/MessageImpl.h"
	"${LIBRARY_DIR}/lib/ClientConnection.cc"
	"${LIBRARY_DIR}/lib/ReaderConfigurationImpl.h"
	"${LIBRARY_DIR}/lib/CMakeLists.txt"
	"${LIBRARY_DIR}/lib/MultiTopicsConsumerImpl.h"
	"${LIBRARY_DIR}/lib/RetryableLookupService.h"
	"${LIBRARY_DIR}/lib/BatchMessageAcker.h"
	"${LIBRARY_DIR}/lib/Future.h"
)

add_library(_pulsar ${SRCS} ${PROTO_SOURCES})
target_include_directories(_pulsar SYSTEM PUBLIC "${LIBRARY_DIR}/include")
target_include_directories(_pulsar SYSTEM PUBLIC "${LIBRARY_DIR}")
target_include_directories(_pulsar SYSTEM PUBLIC "${LIB_AUTOGEN_DIR}")

add_library(ch_contrib::pulsar ALIAS _pulsar)
target_link_libraries(_pulsar PRIVATE boost::optional)
target_link_libraries(_pulsar PRIVATE ch_contrib::curl)
target_link_libraries(_pulsar
  PRIVATE
    ch_contrib::lz4
    ch_contrib::zlib
    ch_contrib::zstd
    OpenSSL::Crypto OpenSSL::SSL
    ch_contrib::protobuf
)
